forgot to save on vscode before committing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/pesto.html">Pesto</a></li>
+        <li><a href="./recipes/chc_cookies.html">Chocolate chips Cookies</a></li>
     </ul>
 </body>
 </html>
