--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,26 @@
     <a href="../index.html"><- Homepage</a>
     <h1>Lasagna</h1>
     <img src="images/lasagna.webp" alt="Lasagna" width="50%">
+    <p>A perfect dish for any occasion.</p>
+    <p>Ingredients:</p>
+    <ul>
+        <li>Minced meat</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Tomato sauce</li>
+        <li>Sugar</li>
+        <li>Spices: parsley, basil, fennel seeds and black pepper</li>
+        <li>Lasagna noodles</li>
+        <li>Cheese: parmesan and mozzarella</li>
+    </ul>
+    <p>Steps:</p>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>    
+    </ol>
 </body>
 </html>
